fix(header): regression where empty content causes a jumpy animation end

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -319,3 +319,7 @@ html {
 .navTransition {
     transition: all 0.6s var(--ease-spring-3);
 }
+
+.navTransition[data-state='closed'] {
+    transition: all 0.6s ease;
+}
